2010-01-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::loadLibrary): fixed bug
	#1053 "duplicate objects created on "Import library" operation".
	When user used "File/Import Library" function, the library is
	checked for objects with duplicate IDs. Library name is also
	checked for duplicates and changed by adding suffix "-1" if it
	matches existing library name. This means the same library can now
	be imported several times, which creates several copies (all with
	their unique IDs to make XML file valid)

2010-01-06  vadim  <vadim@vk.crocodile.org>

	* bug fixes in installer for PF: fixed commands it runs on the
	firewall when it authenticates as regular user.

	* ObjectManipulator_create_new.cpp (ObjectManipulator::newInterface):
	fixed bug #1051: GUI crash when user tried to add an interface to
	an interface.

	* CompilerDriver_pf.cpp (CompilerDriver_pf::getRemoteConfFileName):
	fixed bug #1049 (SourceForge bug #2927165) '(windows only)
	installer uses incorrect path on the OpenBSD firewall'

2010-01-01  vadim  <vadim@vk.crocodile.org>

	* instOptionsDialog.cpp (instOptionsDialog::instOptionsDialog):
	fixed bug #1043: added explanation of the risk associated with
	password caching to the Preferences dialog and Release Notes;
	checkbox "remember passwords" will be disabled if user name is not
	configured

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::updateLibName):
	fixed bug #1042: editing name of a library updates it in the tree
	but does not update it in the drop-down list

2009-12-29  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::restoreCurrentRowColumn): fixed
	bug that caused rule set view to scroll all the way to the top
	every time user modified any object used in the rules. Fixes #968

2009-12-28  vadim  <vadim@vk.crocodile.org>

	Ticket #1040 (Another GUI crash in newClusterDialog) closed by a2k
	fixed

	Ticket #1038 (GUI crash in newClusterDialog on Ubuntu 8.04) closed